--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
         <section class="input-section">
             <h2 class="section-title">Ingresa los nombres de tus amigos</h2>
             <div class="input-wrapper">
-                <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
-                <button class="button-add" onclick="agregarAmigo()">Añadir</button>
-            </div>
+    <input type="text" id="amigo" class="input-name" placeholder="Escribe un nombre">
+    <button class="button-add" onclick="agregarAmigo()">Añadir</button>
+</div>
             
             <div class="name-list-container">
-                <ul id="listaAmigos" class="name-list" aria-labelledby="listaAmigos" role="list"></ul>
-            </div>
+                <ul id="ganador" class="result-list" aria-live="polite"></ul>
             
             <div class="button-container">
                 <button class="button-draw" onclick="sortearAmigo()" aria-label="Sortear amigo secreto y ver los resultados">
